Bootstrap 5 migration, changed some class names

--- a/template-sections.html
+++ b/template-sections.html
@@ -80,7 +80,7 @@
     </div>
     <div class="container-fluid">
         <div class="row justify-content-start">
-            <div class="col-md-8 text-center text-md-left">
+            <div class="col-md-8 text-center text-md-start">
                 <h4 class="eyebrow d-none d-md-block">Attention Everyone Who Is Looking At This Page</h4>
                 <h1>This Is The Massive Headline That CRO Has Probably Given You For The Hero Section Of This Site</h1>
                 <p class="subheadline d-none d-md-block">This is the subheadline item. We've made this one so it doesnt stretch as wide as the headline. Use the column widths to make the text fit nice visually in the hero.</p>
@@ -100,7 +100,7 @@
     </div>
     <div class="container-fluid">
         <div class="row justify-content-end">
-            <div class="col-md-8 text-center text-md-left">
+            <div class="col-md-8 text-center text-md-start">
                 <h4 class="eyebrow d-none d-md-block">Attention Everyone Who Is Looking At This Page</h4>
                 <h1>This Is The Massive Headline That CRO Has Probably Given You For The Hero Section Of This Site</h1>
                 <p class="subheadline d-none d-md-block">This is the subheadline item. We've made this one so it doesnt stretch as wide as the headline. Use the column widths to make the text fit nice visually in the hero.</p>
@@ -140,7 +140,7 @@
     <div class="container">
         <div class="row justify-content-center align-items-center">
             <div class="col-md-10 col-lg-6 order-last order-lg-first">
-                <h2 class="text-center text-lg-left">This Is The Secondary Headline Size, It Will Probably Be The Same Size Across Most Of The Page</h2>
+                <h2 class="text-center text-lg-start">This Is The Secondary Headline Size, It Will Probably Be The Same Size Across Most Of The Page</h2>
                 <p>This is the paragraph text of the section. It will usually be one big paragraph, or two separate paragraphs. Make sure you separate the different blocks of text with separate paragraph tags and not just line breaks.</p>
                 <div class="btn-section text-center">
                     <a href="#offer-form" class="btn btn-primary">Get Your Free Consultation</a>
@@ -162,7 +162,7 @@
                 <img class="img-fluid mb-5 mb-lg-0 view-animation fade-right max-width-image" data-original-src="./assets/prod/images/placeholder.png">
             </div>
             <div class="col-md-10 col-lg-6">
-                <h2 class="text-center text-lg-left">This Is The Secondary Headline Size, It Will Probably Be The Same Size Across Most Of The Page</h2>
+                <h2 class="text-center text-lg-start">This Is The Secondary Headline Size, It Will Probably Be The Same Size Across Most Of The Page</h2>
                 <p>This is the paragraph text of the section. It will usually be one big paragraph, or two separate paragraphs. Make sure you separate the different blocks of text with separate paragraph tags and not just line breaks.</p>
                 <div class="btn-section text-center">
                     <a href="#offer-form" class="btn btn-primary">Get Your Free Consultation</a>
@@ -630,7 +630,7 @@
     <div class="container">
         <div class="row justify-content-center align-items-center">
             <div class="col-md-10 col-lg-6 order-last order-lg-first">
-                <h2 class="text-center text-lg-left">This Is The Secondary Headline Size, It Will Probably Be The Same Size Across Most Of The Page</h2>
+                <h2 class="text-center text-lg-start">This Is The Secondary Headline Size, It Will Probably Be The Same Size Across Most Of The Page</h2>
                 <p>This is the paragraph text of the section. It will usually be one big paragraph, or two separate paragraphs. Make sure you separate the different blocks of text with separate paragraph tags and not just line breaks.</p>
 
                 <form method="POST" action="" id="ebook-form" class="kk-validation">
@@ -668,7 +668,7 @@
                 <img class="img-fluid mb-5 mb-lg-0 view-animation fade-right max-width-image" data-original-src="./assets/prod/images/placeholder.png">
             </div>
             <div class="col-md-10 col-lg-6">
-                <h2 class="text-center text-lg-left">This Is The Secondary Headline Size, It Will Probably Be The Same Size Across Most Of The Page</h2>
+                <h2 class="text-center text-lg-start">This Is The Secondary Headline Size, It Will Probably Be The Same Size Across Most Of The Page</h2>
                 <p>This is the paragraph text of the section. It will usually be one big paragraph, or two separate paragraphs. Make sure you separate the different blocks of text with separate paragraph tags and not just line breaks.</p>
 
                 <form method="POST" action="" id="ebook-form" class="kk-validation">
@@ -709,62 +709,62 @@
                         <table class="table">
                             <tbody>
                             <tr>
-                                <th class="text-left first-column"><p class="mb-0 text-uppercase">Feature</p></th>
+                                <th class="text-start first-column"><p class="mb-0 text-uppercase">Feature</p></th>
                                 <th class="text-center active-cell"><img class="view-animation img-fluid" data-original-src="assets/prod/images/logo.png" alt="NAME OF COMPANY"></th>
                                 <th class="text-center text-capitalize"><p class="text-center text-uppercase">Other Jewelry Stores</p></th>
                             </tr>
                             <tr>
-                                <td class="text-left first-column"><p class="m-0 p-0">One-Of-A-Kind Rings</p></td>
+                                <td class="text-start first-column"><p class="m-0 p-0">One-Of-A-Kind Rings</p></td>
                                 <td class="active-cell text-center"><img class="view-animation img-fluid icon" src="assets/prod/svgs/icon-check.svg" alt="Icon check"></td>
                                 <td class="text-center"><img class="view-animation img-fluid icon" src="assets/prod/svgs/icon-cross.svg" alt="Icon cross"></td>
                             </tr>
                             <tr>
-                                <td class="text-left first-column"><p class="m-0 p-0">High Quality Stones</p></td>
+                                <td class="text-start first-column"><p class="m-0 p-0">High Quality Stones</p></td>
                                 <td class="active-cell text-center"><img class="view-animation img-fluid icon" src="assets/prod/svgs/icon-check.svg" alt="Icon check"></td>
                                 <td class="text-center"><img class="view-animation img-fluid icon" src="assets/prod/svgs/icon-cross.svg" alt="Icon cross"></td>
                             </tr>
                             <tr>
-                                <td class="text-left first-column"><p class="m-0 p-0">G.I.A Certified Diamonds</p></td>
+                                <td class="text-start first-column"><p class="m-0 p-0">G.I.A Certified Diamonds</p></td>
                                 <td class="active-cell text-center"><img class="view-animation img-fluid icon" src="assets/prod/svgs/icon-check.svg" alt="Icon check"></td>
                                 <td class=" text-center"><img class="view-animation img-fluid icon" src="assets/prod/svgs/icon-check.svg" alt="Icon check"></td>
                             </tr>
                             <tr>
-                                <td class="text-left first-column"><p class="m-0 p-0">Personalised, One-On-One Time</p></td>
+                                <td class="text-start first-column"><p class="m-0 p-0">Personalised, One-On-One Time</p></td>
                                 <td class="active-cell text-center"><img class="view-animation img-fluid icon" src="assets/prod/svgs/icon-check.svg" alt="Icon check"></td>
                                 <td class=" text-center"><img class="view-animation img-fluid icon" src="assets/prod/svgs/icon-check.svg" alt="Icon check"></td>
                             </tr>
                             <tr>
-                                <td class="text-left first-column"><p class="m-0 p-0">Lifetime Warranty</p></td>
+                                <td class="text-start first-column"><p class="m-0 p-0">Lifetime Warranty</p></td>
                                 <td class="active-cell text-center"><img class="view-animation img-fluid icon" src="assets/prod/svgs/icon-check.svg" alt="Icon check"></td>
                                 <td class=" text-center"><img class="view-animation img-fluid icon" src="assets/prod/svgs/icon-cross.svg" alt="Icon cross"></td>
                             </tr>
                             <tr>
-                                <td class="text-left first-column"><p class="m-0 p-0">Hassle Free Refunds and Returns</p></td>
+                                <td class="text-start first-column"><p class="m-0 p-0">Hassle Free Refunds and Returns</p></td>
                                 <td class="active-cell text-center"><img class="view-animation img-fluid icon" src="assets/prod/svgs/icon-check.svg" alt="Icon check"></td>
                                 <td class="text-center"><img class="view-animation img-fluid icon" src="assets/prod/svgs/icon-cross.svg" alt="Icon cross"></td>
                             </tr>
                             <tr>
-                                <td class="text-left first-column"><p class="m-0 p-0">Free Ring Resizing</p></td>
+                                <td class="text-start first-column"><p class="m-0 p-0">Free Ring Resizing</p></td>
                                 <td class="active-cell text-center"><img class="view-animation img-fluid icon" src="assets/prod/svgs/icon-check.svg" alt="Icon check"></td>
                                 <td class="text-center"><img class="view-animation img-fluid icon" src="assets/prod/svgs/icon-check.svg" alt="Icon check"></td>
                             </tr>
                             <tr>
-                                <td class="text-left first-column"><p class="m-0 p-0">Natural and Lab Grown Diamonds</p></td>
+                                <td class="text-start first-column"><p class="m-0 p-0">Natural and Lab Grown Diamonds</p></td>
                                 <td class="active-cell text-center"><img class="view-animation img-fluid icon" src="assets/prod/svgs/icon-check.svg" alt="Icon check"></td>
                                 <td class="text-center"><img class="view-animation img-fluid icon" src="assets/prod/svgs/icon-cross.svg" alt="Icon cross"></td>
                             </tr>
                             <tr>
-                                <td class="text-left first-column"><p class="m-0 p-0">Lifetime Diamond Updgrades</p></td>
+                                <td class="text-start first-column"><p class="m-0 p-0">Lifetime Diamond Updgrades</p></td>
                                 <td class="active-cell text-center"><img class="view-animation img-fluid icon" src="assets/prod/svgs/icon-check.svg" alt="Icon check"></td>
                                 <td class="text-center"><img class="view-animation img-fluid icon" src="assets/prod/svgs/icon-cross.svg" alt="Icon cross"></td>
                             </tr>
                             <tr>
-                                <td class="text-left first-column"><p class="m-0 p-0">100% Satisfaction Guarantee</p></td>
+                                <td class="text-start first-column"><p class="m-0 p-0">100% Satisfaction Guarantee</p></td>
                                 <td class="active-cell text-center"><img class="view-animation img-fluid icon" src="assets/prod/svgs/icon-check.svg" alt="Icon check"></td>
                                 <td class="text-center"><img class="view-animation img-fluid icon" src="assets/prod/svgs/icon-cross.svg" alt="Icon cross"></td>
                             </tr>
                             <tr>
-                                <td class="text-left first-column"><p class="m-0 p-0">Diamond Price-Beat Promise</p></td>
+                                <td class="text-start first-column"><p class="m-0 p-0">Diamond Price-Beat Promise</p></td>
                                 <td class="active-cell text-center"><img class="view-animation img-fluid icon" src="assets/prod/svgs/icon-check.svg" alt="Icon check"></td>
                                 <td class="text-center"><img class="view-animation img-fluid icon" src="assets/prod/svgs/icon-cross.svg" alt="Icon cross"></td>
                             </tr>
@@ -990,7 +990,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="variations-container mb-4 text-left">
+                    <div class="variations-container mb-4 text-start">
                         <div class="variation-type-label mb-0"><h4 class="mb-2">Warranty</h4></div>
                         <div class="options-container">
                             <div class="options radio-options">
