Updated swiperjs to version 7

--- a/template-sections.html
+++ b/template-sections.html
@@ -267,7 +267,7 @@
             <div class="col-md-10 col-lg-8 px-0">
 
                 <!-- Slider and slides within -->
-                <div class="swiper-container reviews d-flex justify-content-center align-items-center text-center">
+                <div class="swiper reviews d-flex justify-content-center align-items-center text-center">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide slide-1">
                             <p class="mx-auto">This is the paragraph text of the section. It will usually be one big paragraph, or two separate paragraphs. Make sure you separate the different blocks of text with separate paragraph tags and not just line breaks.</p>
@@ -299,7 +299,7 @@
         <div class="row justify-content-center">
             <div class="col-md-12">
 
-                <div class="swiper-container gallery-top">
+                <div class="swiper gallery-top">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide slide-1">
                             <img class="img-fluid" data-original-src="./assets/prod/images/placeholder.png">
@@ -321,7 +321,7 @@
                     <div class="swiper-button-next view-animation"></div>
                     <div class="swiper-button-prev view-animation"></div>
                 </div>
-                <div class="swiper-container gallery-thumbs control mt-4">
+                <div class="swiper gallery-thumbs control mt-4">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide slide-1">
                             <img class="img-fluid" data-original-src="./assets/prod/images/placeholder.png">
@@ -356,7 +356,7 @@
         <div class="row justify-content-center mb-5">
             <div class="col-md-12">
 
-                <div class="swiper-container video-top">
+                <div class="swiper video-top">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide slide-1">
                             <div class="video-preview-container video-container ">
@@ -413,7 +413,7 @@
                     <div class="swiper-button-next view-animation"></div>
                     <div class="swiper-button-prev view-animation"></div>
                 </div>
-                <div class="swiper-container video-thumbs control mt-4 text-center">
+                <div class="swiper video-thumbs control mt-4 text-center">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide slide-1">
                             <img class="img-fluid" data-original-src="./assets/prod/images/placeholder.png">
@@ -458,7 +458,7 @@
                 <h2>This is image gallery</h2>
             </div>
         </div>
-        <div class="swiper-container extended-gallery mobile mb-5">
+        <div class="swiper extended-gallery mobile mb-5">
             <div class="swiper-wrapper d-lg-flex flex-lg-wrap mb-4 justify-content-lg-center">
                 <div class="swiper-slide col-lg-4 p-4 text-center">
                     <img class="max-width-image" data-original-src="./assets/prod/images/placeholder.png">
@@ -538,7 +538,7 @@
             
             <div class="col-xl-10">
                 <div class="row jusfity-content center align-items-center">
-                    <div class="swiper-container mobile pb-5 pb-md-0">
+                    <div class="swiper mobile pb-5 pb-md-0">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide slide-1 p-3">
                                 <img class="d-block max-width-image mx-auto img-fluid" data-original-src="./assets/prod/images/placeholder.png">
@@ -579,7 +579,7 @@
 
         <div class="row justify-content-center align-items-center">
             <div class="col-xl-10">
-                <div class="swiper-container mobile pb-5 pb-md-0">
+                <div class="swiper mobile pb-5 pb-md-0">
                     <div class="swiper-wrapper d-lg-flex flex-lg-wrap mb-4 mb-md-0">
                         <div class="swiper-slide slide-1 col-lg-3 mb-4 px-3">
                             <img class="d-block max-width-image mx-auto img-fluid" data-original-src="./assets/prod/images/placeholder.png">
@@ -908,8 +908,8 @@
 <section class="two-column bg-white product-section">
     <div class="container">
         <div class="row justify-content-center align-items-center mb-5 pb-5">
-            <div class="col-md-10 col-lg-6 mb-5 mb-lg-0">
-                <div class="swiper-container gallery-top">
+            <div class="col-md-10 col-lg-6 mb-5 mb-lg-0 position-relative">
+                <div class="swiper gallery-top">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide slide-1">
                             <img class="img-fluid" data-original-src="./assets/prod/images/placeholder.png">
@@ -931,7 +931,7 @@
                     <div class="swiper-button-next swiper-button-white"></div>
                     <div class="swiper-button-prev swiper-button-white"></div>
                 </div>
-                <div class="swiper-container gallery-thumbs control mt-4">
+                <div class="swiper gallery-thumbs control mt-4">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide slide-1">
                             <img class="img-fluid" data-original-src="./assets/prod/images/placeholder.png">
