--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-- Standard Header -->
 <header class="fixed-top">
     <div class="container">
-        <div class="row justify-content-between align-items-center">
+        <div class="d-flex justify-content-between align-items-center">
             <div class="header-logo">
                 <picture>
                     <source srcset="./assets/prod/images/logo-cover.webp" type="image/webp">
