--- a/template-sections.html
+++ b/template-sections.html
@@ -43,7 +43,7 @@
             </div>
             <div class="col-md-8 col-lg-6">
                 <div class="btn-section text-center">
-                    <a href="#offer-form" class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#offer-form" class="btn btn-primary">BOOK MY 15-MINUTE RAPID SETTLEMENT CALL</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -65,7 +65,7 @@
             </div>
             <div class="col-md-8 col-lg-6">
                 <div class="btn-section text-center">
-                    <a href="#offer-form" class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#offer-form" class="btn btn-primary">BOOK MY 15-MINUTE RAPID SETTLEMENT CALL</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -85,7 +85,7 @@
                 <h1>This Is The Massive Headline That CRO Has Probably Given You For The Hero Section Of This Site</h1>
                 <p class="subheadline d-none d-md-block">This is the subheadline item. We've made this one so it doesnt stretch as wide as the headline. Use the column widths to make the text fit nice visually in the hero.</p>
                 <div class="btn-section text-center">
-                    <a href="#offer-form" class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#offer-form" class="btn btn-primary">BOOK MY 15-MINUTE RAPID SETTLEMENT CALL</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                 <h1>This Is The Massive Headline That CRO Has Probably Given You For The Hero Section Of This Site</h1>
                 <p class="subheadline d-none d-md-block">This is the subheadline item. We've made this one so it doesnt stretch as wide as the headline. Use the column widths to make the text fit nice visually in the hero.</p>
                 <div class="btn-section text-center">
-                    <a href="#offer-form" class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#offer-form" class="btn btn-primary">BOOK MY 15-MINUTE RAPID SETTLEMENT CALL</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -127,7 +127,7 @@
         <div class="row justify-content-center">
             <div class="col-md-8 col-lg-6">
                 <div class="btn-section text-center">
-                    <a href="#offer-form" class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#offer-form" class="btn btn-primary">BOOK MY 15-MINUTE RAPID SETTLEMENT CALL</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -143,7 +143,7 @@
                 <h2 class="text-center text-lg-start">This Is The Secondary Headline Size, It Will Probably Be The Same Size Across Most Of The Page</h2>
                 <p>This is the paragraph text of the section. It will usually be one big paragraph, or two separate paragraphs. Make sure you separate the different blocks of text with separate paragraph tags and not just line breaks.</p>
                 <div class="btn-section text-center">
-                    <a href="#offer-form" class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#offer-form" class="btn btn-primary">BOOK MY 15-MINUTE RAPID SETTLEMENT CALL</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -165,7 +165,7 @@
                 <h2 class="text-center text-lg-start">This Is The Secondary Headline Size, It Will Probably Be The Same Size Across Most Of The Page</h2>
                 <p>This is the paragraph text of the section. It will usually be one big paragraph, or two separate paragraphs. Make sure you separate the different blocks of text with separate paragraph tags and not just line breaks.</p>
                 <div class="btn-section text-center">
-                    <a href="#offer-form" class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#offer-form" class="btn btn-primary">BOOK MY 15-MINUTE RAPID SETTLEMENT CALL</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -246,7 +246,7 @@
         <div class="row justify-content-center">
             <div class="col-md-8 col-lg-6">
                 <div class="btn-section text-center">
-                    <a href="#offer-form" class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#offer-form" class="btn btn-primary">BOOK MY 15-MINUTE RAPID SETTLEMENT CALL</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
@@ -443,7 +443,7 @@
         <div class="row justify-content-center">
             <div class="col-md-10 col-lg-6">
                 <div class="btn-section text-center">
-                    <a href="#offer-form" class="btn btn-primary">Get Your Free Consultation</a>
+                    <a href="#offer-form" class="btn btn-primary">BOOK MY 15-MINUTE RAPID SETTLEMENT CALL</a>
                     <p> This is the descriptive CTA button which will probably be two lines long </p>
                 </div>
             </div>
