Rapid consent section

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                                         xmlns="http://www.w3.org/2000/svg">
                                         <circle cx="16" cy="16" r="7" fill="#95BE3F" />
                                         <circle cx="16" cy="16" r="11.5" stroke="#95BE3F" stroke-opacity="0.09"
-                                        stroke-width="9" />
+                                            stroke-width="9" />
                                     </svg>
                                 </div>
                                 <div class="dotted-line-base dotted-line-vert"></div>
@@ -528,7 +528,7 @@
                                         xmlns="http://www.w3.org/2000/svg">
                                         <circle cx="16" cy="16" r="7" fill="#95BE3F" />
                                         <circle cx="16" cy="16" r="11.5" stroke="#95BE3F" stroke-opacity="0.09"
-                                        stroke-width="9" />
+                                            stroke-width="9" />
                                     </svg>
                                 </div>
                                 <div class="dotted-line-base dotted-line-vert"></div>
@@ -566,7 +566,7 @@
                                         xmlns="http://www.w3.org/2000/svg">
                                         <circle cx="16" cy="16" r="7" fill="#95BE3F" />
                                         <circle cx="16" cy="16" r="11.5" stroke="#95BE3F" stroke-opacity="0.09"
-                                        stroke-width="9" />
+                                            stroke-width="9" />
                                     </svg>
                                 </div>
                                 <div class="dotted-line-base dotted-line-vert"></div>
@@ -608,7 +608,7 @@
                                         xmlns="http://www.w3.org/2000/svg">
                                         <circle cx="16" cy="16" r="7" fill="#95BE3F" />
                                         <circle cx="16" cy="16" r="11.5" stroke="#95BE3F" stroke-opacity="0.09"
-                                        stroke-width="9" />
+                                            stroke-width="9" />
                                     </svg>
                                 </div>
                                 <div class="dotted-line-base dotted-line-vert"></div>
@@ -1274,7 +1274,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-10 col-lg-8 text-center">
                     <div class="eyebrow">LIMITED SPOTS AVAILABLE IN <span class="output"></span> </div>
-                    <h2>The Legal Drafter’s ‘Rapid’ <br>
+                    <h2>The Legal Drafter’s 'Rapid’ <br>
                         Consent Orders Package
                     </h2>
                     <h3 class="subhead">Fixed Fee Of Just $1,300</h3>
@@ -1288,20 +1288,32 @@
                 </div>
             </div>
             <div class="row justify-content-center align-items-center">
-                <div class="col-md-10 col-lg-6 text-center order-first order-lg-last">
-                    <img class="img-fluid mb-5 mb-lg-0 view-animation fade-left max-width-image"
-                        data-original-src="./assets/prod/images/placeholder.png">
+                <div class="col-md-10 col-lg-6 order-last">
+                    <h5 class="text-center text-lg-start">
+                        Agreed to terms and ready to finalise your relationship? Our 'Rapid' Consent Orders Package
+                        includes everything you need:
+                    </h5>
+                    <ul>
+                        <li>
+                            Consent Orders prepared in 24 hours
+                        </li>
+                        <li>
+                            Final Consent Orders filed in the Family Court
+                        </li>
+                        <li>
+                            Unlimited calls and emails with rapid response
+                        </li>
+                        <li>
+                            Regular progress updates to keep you in the loop
+                        </li>
+                        <li>
+                            Includes property, financial settlements, parenting arrangements & superannuation split.
+                        </li>
+                    </ul>
                 </div>
-                <div class="col-md-10 col-lg-6 order-last order-lg-first">
-                    <h2 class="text-center text-lg-start">This Is The Secondary Headline Size, It Will Probably Be The
-                        Same Size Across Most Of The Page</h2>
-                    <p>This is the paragraph text of the section. It will usually be one big paragraph, or two separate
-                        paragraphs. Make sure you separate the different blocks of text with separate paragraph tags and
-                        not just line breaks.</p>
-                    <div class="btn-section text-center">
-                        <a href="#offer-form" class="btn btn-primary">BOOK MY 15-MINUTE RAPID SETTLEMENT CALL</a>
-                        <p> This is the descriptive CTA button which will probably be two lines long </p>
-                    </div>
+                <div class="col-md-10 col-lg-6 text-center order-firstform-img">
+                    <img class="img-fluid mb-5 mb-lg-0 view-animation fade-left max-width-image"
+                        data-original-src="./assets/prod/images/a4_consent_app.png">
                 </div>
             </div>
             <div class="row justify-content-center">
