--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -5,42 +5,49 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="#### DESCRIPTION HERE ####">
-
-    <title>#### REPLACE ME ####</title>
+    <meta name="description" content="Save $1000s on legal fees with rapid consent orders prepared within 24 hours...so you can finally move on with your life. Book Now.">
+    <meta name="keywords" content="consent orders, consent order application, family court consent orders, consent orders wa, consent order family law,
+    family court consent orders property settlement, consent orders kit, consent orders qld, parenting consent orders, consent orders nsw">
+    <title>Get Consent Orders Under 24 Hours For An Affordable Fixed Fee</title>
 
     <!-- Compiled Stylesheet -->
     <link href="../assets/prod/css/main.css" rel="stylesheet">
+
 </head>
 
-<body class="thank-you">
+<body>
 
-<header class="fixed-top">
-    <div class="container">
-        <div class="row justify-content-between align-items-center">
-            <div class="header-logo">
-                <picture>
-                    <source srcset="../assets/prod/images/logo-cover.webp" type="image/webp">
-                    <source srcset="../assets/prod/images/logo.png" type="image/png"> 
-                    <img class="" src="../assets/prod/images/logo-cover.webp" alt="NAME OF COMPANY">
-                </picture>
+    <!-- Standard Header -->
+    <header class="fixed-top">
+        <div class="container">
+            <div class="d-flex justify-content-between align-items-center">
+                <div class="header-logo">
+                    <picture>
+                        <source srcset="../assets/prod/images/logo-cover.webp" type="image/webp">
+                        <source srcset="../assets/prod/images/logo.png" type="image/png">
+                        <img class="" src="../assets/prod/images/logo-cover.webp" alt="NAME OF COMPANY">
+                    </picture>
+                </div>
+                <a href="tel:0416280901" class="header-phone d-flex align-items-center">
+                    <div class="phone-icon mr-md-2">
+                        <img class="img-fluid" src="../assets/prod/svgs/icon-phone.svg" alt="Icon Phone">
+                    </div>
+                    <div class="phone-text d-none d-md-flex flex-column">
+                        <span>Got Questions?</span>
+                        <em>0416 280 901</em>
+                    </div>
+                </a>
             </div>
-            <a href="tel:XXXXXXXXXX" class="header-phone d-flex align-items-center">
-                <div class="phone-icon mr-md-2">
-                    <img class="view-animation img-fluid" src="../assets/prod/svgs/icon-phone.svg" alt="Icon Phone">
-                </div>
-                <div class="phone-text d-none d-md-flex flex-column">
-                    <span>Got Questions?</span>
-                    <em>XX XXXX XXXX</em>
-                </div>
-            </a>
         </div>
-    </div>
-</header>
+    </header>
 
 <section id="hero" class="hero-centered d-flex justify-content-center align-items-center">
-    <div class="background-image-container semi-transparent-bg-light">
-        <img class="" data-original-src="../assets/prod/images/placeholder.png">
+    <div class="background-image-container">
+        <picture>
+            <source srcset="../assets/prod/images/hero_bg-cover.webp" type="image/webp" />
+            <source srcset="../assets/prod/images/hero_bg.png" type="image/png" />
+            <img src="../assets/prod/images/hero_bg-cover.webp" alt="" />
+        </picture>
     </div>
     <div class="container">
         <div class="row justify-content-center text-center">
@@ -54,7 +61,7 @@
 </section>
 
 <!-- Footer - King Kong Tag -->
-<footer>
+<!-- <footer>
     <div class="container">
         <div class="row text-center">
             <div class="col-12 py-4">
@@ -62,7 +69,7 @@
             </div>
         </div>
     </div>
-</footer>
+</footer> -->
 
 <!-- Custom Scripts -->
 <script type="text/javascript" src="../assets/prod/js/main.js"></script>
