--- a/index.html
+++ b/index.html
@@ -1512,7 +1512,7 @@
 </script>
 
 <!-- Formspree AJAX script -->
-<script>
+<!-- <script>
     var form = document.getElementById("offer-form");
     
 
@@ -1550,7 +1550,7 @@
     });
 }
 
-</script>
+</script> -->
 
 
     
