--- a/index.html
+++ b/index.html
@@ -1393,7 +1393,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-8 col-lg-6" id="form-anchor">
                     <div class="single-column__form">
-                        <form method="POST" action="https://formspree.io/f/mgedaewj" id="offer-form" class="kk-validation">
+                        <form method="POST" action="https://formspree.io/f/mgedaewj" id="offer-form">
                             <div class="form-content">
 
                                 <div class="form-group">
@@ -1446,7 +1446,6 @@
                                     <textarea class="message" id="message" name="message"
                                         placeholder="Any questions for our team?"></textarea>
                                 </div>
-                                <!-- <p class="text-center" id="form-status"></p> -->
                                 <div class="form-group">
                                     <div class="btn-section">
                                         <input type="submit" class="btn btn-primary" value="BOOK MY 15-MINUTE RAPID SETTLEMENT CALL" />
