General fixes and updates

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-10">
-                    <h4 class="eyebrow ">HAVE YOU AND YOUR PARTNER AGREED TO TERMS FOR SETTLEMENT?</h4>
+                    <h4 class="eyebrow">HAVE YOU AND YOUR PARTNER AGREED TO TERMS FOR SETTLEMENT?</h4>
                     <h1> <span class="underline">Save $1,000s On Legal Fees</span> With Rapid Consent Orders Prepared
                         Inside 24 Hours … So You Can <span class="underline">FINALLY Move On With Your Life</span>
 
@@ -66,7 +66,7 @@
                 </div>
                 <div class="col-md-8 col-lg-6">
                     <div class="btn-section">
-                        <a href="#form" class="btn btn-primary">BOOK MY 15-MINUTE RAPID SETTLEMENT CALL</a>
+                        <a href="#form" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID SETTLEMENT CALL</a>
                         <div class="hero-reviews d-flex mx-auto">
                             <img src="./assets/prod/images/header_google_reviews.png" alt="">
                             <img src="./assets/prod/images/header_facebook_reviews.png" alt="">
@@ -125,7 +125,7 @@
                 </div>
                 <div class="row justify-content-center">
 
-                    <div class="col-md-8 col-lg-6 pb-5">
+                    <div class="col-md-8 col-lg-6">
                         <p class="copy">
                             The breakdown of a relationship can be hell. Feeling like you can't agree on anything,
                             fighting over insignificant details, stressful days and sleepless nights - the entire
@@ -171,7 +171,7 @@
             <div class="row justify-content-center ">
                 <div class="col-md-8 col-lg-6"> 
                     <div class="btn-section text-center">
-                        <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE RAPID SETTLEMENT CALL</a>
+                        <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID SETTLEMENT CALL</a>
                         <p> Get Consent Orders Prepared Inside 24 Hours <br>
                             So You Can Finally Move On With Your Life!</p>
                     </div>
@@ -188,7 +188,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-10 col-lg-9 text-center">
-                    <h2>5 Reasons You Should Hire The Legal
+                    <h2>5 Reasons You Should Hire The Legal <br class="d-md-block d-none">
                         Drafter To Prepare Your Consent Orders…</h2>
                 </div>
                 <div class="col-md-10 col-lg-8">
@@ -374,7 +374,7 @@
                 <div class="row justify-content-center ">
                     <div class="col-md-8 col-lg-6">
                         <div class="btn-section text-center">
-                            <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE RAPID SETTLEMENT CALL</a>
+                            <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID SETTLEMENT CALL</a>
                             <p> Get Consent Orders Prepared Inside 24 Hours <br>
                                 So You Can Finally Move On With Your Life!</p>
                         </div>
@@ -440,7 +440,7 @@
     </section>
 
 
-    <section class="img-text-section ">
+    <section class="img-text-section less-pad">
         <div class="container">
             <div class="row justify-content-center align-items-center">
                 <div class="col-md-10 col-lg-6 order-last order-lg-first">
@@ -459,7 +459,7 @@
 
                     </p>
                     <div class="btn-section text-center">
-                        <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE RAPID SETTLEMENT CALL</a>
+                        <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID SETTLEMENT CALL</a>
                         <p> Get Consent Orders Prepared Inside 24 Hours <br>
                             So You Can Finally Move On With Your Life!</p>
                     </div>
@@ -647,7 +647,7 @@
                     </ul>
                 </div>
                 <div class="btn-section text-center">
-                    <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE RAPID SETTLEMENT CALL</a>
+                    <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID SETTLEMENT CALL</a>
                     <p> Get Consent Orders Prepared Inside 24 Hours <br>
                         So You Can Finally Move On With Your Life!</p>
                 </div>
@@ -662,18 +662,18 @@
                 <div class="col-md-10 col-lg-8 text-center">
                     <img class="lazyload" data-sizes="auto" data-original-src="./assets/prod/images/guarantee.jpg">
                 </div>
-                <div class="col-md-8 col-lg-6 text-cente">
+                <div class="col-md-8 text-center">
                     <h2>Ready In 24 Hours… Or We Work For Free</h2>
-                    <p>We’re fed up with the legal industry's neglect for clients. Whether it’s slow response times or
+                </div>
+                    <p class="mx-auto">We're fed up with the legal industry's neglect for clients. Whether it's slow response times or
                         massive delays to deliver the bare minimum of what is required… we want to turn this outdated
-                        practice on its head. That’s why we guarantee your Consent Orders will be prepared and ready for
+                        practice on its head. That's why we guarantee your Consent Orders will be prepared and ready for
                         you to sign in 24 hours or less.
                         <br><br>
-                        *T&C’s apply
+                        *T&C's apply
                     </p>
-                </div>
                 <div class="btn-section text-center">
-                    <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE RAPID SETTLEMENT CALL</a>
+                    <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID SETTLEMENT CALL</a>
                     <p> Get Consent Orders Prepared Inside 24 Hours <br>
                         So You Can Finally Move On With Your Life!</p>
                 </div>
@@ -1274,7 +1274,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-10 col-lg-8 text-center">
                     <div class="eyebrow">LIMITED SPOTS AVAILABLE IN <span class="output"></span> </div>
-                    <h2>The Legal Drafter's 'Rapid' <br>
+                    <h2>The Legal Drafter's 'Rapid' <br class="">
                         Consent Orders Package
                     </h2>
                     <h3 class="subhead">Fixed Fee Of Just $1,300</h3>
@@ -1311,7 +1311,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-md-10 col-lg-6 text-center order-firstform-img">
+                <div class="col-md-10 col-lg-6 order-first form-img">
                     <img class="img-fluid mb-5 mb-lg-0 view-animation fade-left max-width-image"
                         data-original-src="./assets/prod/images/a4_consent_app.png">
                 </div>
@@ -1319,8 +1319,9 @@
             <div class="row justify-content-center">
                 <div class="col-md-8 col-lg-6">
                     <div class="btn-section text-center">
-                        <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE RAPID SETTLEMENT CALL</a>
-                        <p> This is the descriptive CTA button which will probably be two lines long </p>
+                        <a href="#form-anchor" class="btn btn-primary">BOOK MY 15-MINUTE <br class="d-sm-none"> RAPID SETTLEMENT CALL</a>
+                        <p> Get Consent Orders Prepared Inside 24 Hours <br>
+                            So You Can Finally Move On With Your Life!</p>
                     </div>
                 </div>
             </div>
@@ -1335,13 +1336,16 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-10 col-lg-9 text-center">
-                    <h2>Get Started NOW With Your FREE, 15-Minute ‘Rapid Settlement’ Call!</h2>
+                    <h2>Get Started NOW With Your FREE, <br class="d-md-block d-none"> 15-Minute 'Rapid Settlement' Call!</h2>
                 </div>
 
-                <div class="col-10 text-center">
+                <div class="col-10">
                     <img class="img-fluid mb-5 mb-lg-0 view-animation fade-left max-width-image"
                         data-original-src="./assets/prod/images/form_header_img.png">
-                </div>
+                    </div>
+                    <div class="col-10 justify-content-center d-flex subheader">
+                            Get all your questions answered with no-obligation to buy in <br class="d-none"> a rapid 15-minute call. Here’s what you get in this FREE session:
+                    </div>
             </div>
 
 
@@ -1350,7 +1354,7 @@
                     <ul class="footer-list text-left">
                         <li class="d-flex align-items-start mb-5">
                             <div class="tick">
-                                <svg viewBox="0 0 30 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="23" height="23"viewBox="0 0 30 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path
                                         d="M26.0259 0L10.7405 14.2222L4.2762 7.30335L0 11.3222L10.4434 22.5L30 4.32049L26.0259 0Z"
                                         fill="#95BE3F" />
@@ -1361,7 +1365,7 @@
                         </li>
                         <li class="d-flex align-items-start mb-5">
                             <div class="tick">
-                                <svg viewBox="0 0 30 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="23" height="23"viewBox="0 0 30 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path
                                         d="M26.0259 0L10.7405 14.2222L4.2762 7.30335L0 11.3222L10.4434 22.5L30 4.32049L26.0259 0Z"
                                         fill="#95BE3F" />
@@ -1373,7 +1377,7 @@
                         </li>
                         <li class="d-flex align-items-start mb-5">
                             <div class="tick">
-                                <svg viewBox="0 0 30 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="23" height="23"viewBox="0 0 30 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path
                                         d="M26.0259 0L10.7405 14.2222L4.2762 7.30335L0 11.3222L10.4434 22.5L30 4.32049L26.0259 0Z"
                                         fill="#95BE3F" />
