--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
     <!-- Compiled Stylesheet -->
     <link href="assets/prod/css/main.css" rel="stylesheet">
+
+    <!-- BugHerd Script-->
+    <script type="text/javascript" src="https://www.bugherd.com/sidebarv2.js?apikey=xkyagrgrvieyn8xdsiusbq" async="true"></script>
+
     <!-- Google Tag Manager -->
     <script>
         (function (w, d, s, l, i) {
